Initial commit for docker containers

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>tty.js</title>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="user.css">
+<!--<link rel="stylesheet" href="user.css">-->
 
 <h1>tty.js</h1>
 
@@ -13,25 +13,30 @@
   <p>Click the tilde with a modifier to close the window.</p>
 </div>
 
-<ul>
-  <li><button onclick="new tty.Window(false, {title:'localhost'})">Open</button> local terminal
-  <li><button onclick="new tty.Window(false, {title:'root@localhost',protocol:'local', user:'root'})">Open</button> local terminal for user root
-  <li><button onclick="new tty.Window(false, {title:'root@localhost', protocol:'ssh', user:'root', host:'localhost'})">Open</button> ssh terminal to root@localhost
-  <li><button onclick="new tty.Window(false, {title:'foo', protocol:'docker', container:'foo'})">Open</button> terminal to docker container "foo"
-  <li><button onclick="new tty.Window(false, {title:'bar', protocol:'docker', container:'bar', remoteHost:'localhost'})">Open</button> terminal to docker container "bar" via ssh
-</ul>
+<!--<ul>-->
+  <!--<li><button onclick="new tty.Window(false, {title:'localhost'})">Open</button> local terminal-->
+  <!--<li><button onclick="new tty.Window(false, {title:'root@localhost',protocol:'local', user:'root'})">Open</button> local terminal for user root-->
+  <!--<li><button onclick="new tty.Window(false, {title:'root@localhost', protocol:'ssh', user:'root', host:'localhost'})">Open</button> ssh terminal to root@localhost-->
+  <!--<li><button onclick="new tty.Window(false, {title:'foo', protocol:'docker', container:'foo ; sleep 10;'})">Open</button> terminal to docker container "foo"-->
+  <!--<li><button onclick="new tty.Window(false, {title:'bar', protocol:'docker', container:'bar', remoteHost:'localhost'})">Open</button> terminal to docker container "bar" via ssh-->
+<!--</ul>-->
+
+<div class="dockerContainers"></div>
+
 
 <script src="socket.io/socket.io.js"></script>
 <script src="term.js"></script>
 <script src="options.js"></script>
 <script src="tty.js"></script>
-<script src="user.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script src="docker.js"></script>
 <script>
 (function() {
   var on = Terminal.on;
   var off = Terminal.off;
 
   function load() {
+    Terminal.screenKeys = true;
     if (load.done) return;
     load.done = true;
 
